--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
+    "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "build:css": "tailwindcss -i ./src/public/main.css -o ./src/public/output.css --watch"
   },
@@ -18,6 +19,7 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "nodemon": "^3.1.9",
     "prisma": "^6.6.0"
   }
 }
